jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example5.test103
{
	"ale": {
		"runs-on": 1
	} ,
	"prop1":"aa",
	"prop2":1,
	"prop3":""
}                 